# mlops-training

./: .gitignore
01-intro/: duration-prediction.ipynb  homework.ipynb
02-experiment_tracking/: Model-registry(DEPRECATED).ipynb  duration-prediction.ipynb  homework.ipynb  hpo.py  register_model.py  train.py
03-orchestration/: duration-prediction.ipynb  duration-prediction.py
03-orchestration/homework/mlops-orchestration/: pyproject.toml
03-orchestration/homework/mlops-orchestration/src/mlops_orchestration/defs/: assets.py  partitions.py  resources.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/: definitions.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/defs/: partitions.py  resources.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/defs/assets/data/: train_dataframe.py  validation_dataframe.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/defs/assets/features/: X_train.py  X_val.py  dict_vectorizer.py  y_train.py  y_val.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/defs/assets/model/: trained_model.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/defs/assets/reports/: monthly_report.py
03-orchestration/homework/nyc_taxi/src/nyc_taxi/defs/integrations/: dbt_assets.py
